--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-bengali.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-bengali.htm
@@ -39,7 +39,7 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif'>(
 lang=bn style='font-family:"Arial",sans-serif'> </span><span lang=bn
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,&#2534;:&#2537;&#2536;))</span></p>
 
-<p class=MsoNormal align=center style='text-align:center;line-height:normal'>,<div
+<p class=MsoNormal align=center style='text-align:center;line-height:normal'><div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -319,25 +319,113 @@ style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,&#2489
 </span><span lang=bn style='font-family:"Arial",sans-serif'>&#2438;&#2478;&#2495;
 &#2476;&#2482;&#2495; &#2479;&#2503; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2447;&#2463;&#2494;
 &#2489;&#2476;&#2503;, </span><span lang=bn style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2468;&#2494;&#2489;&#2482;&#2503;
 &#2534; &#2469;&#2503;&#2453;&#2503; </span><span lang=bn style='font-family:
 "Arial",sans-serif'>&#2534; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2474;&#2480;&#2509;&#2479;&#2472;&#2509;&#2468;</span><span
 lang=bn style='font-family:"Arial",sans-serif'> &#2447;&#2476;&#2434;
 &#2438;&#2478;&#2495; V</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image004.gif"></span><sub><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><sub><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2482;&#2507;&#2465;</span></sub><span
 lang=bn style='font-family:"Arial",sans-serif'> 0 &#2447;&#2480;
 &#2488;&#2478;&#2494;&#2472; </span><span lang=bn style='font-size:12.0pt;
@@ -345,18 +433,84 @@ line-height:150%;font-family:"Arial",sans-serif'>&#2489;&#2476;&#2503;,
 &#2468;&#2494;&#2489;&#2482;&#2503; </span><span lang=bn style='font-family:
 "Arial",sans-serif'>2 &#2447;&#2480; &#2478;&#2471;&#2509;&#2479;&#2503; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>is
 between </span><span lang=bn style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,and
 2</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2489;&#2476;&#2503;&#2404;</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=bn
@@ -373,13 +527,57 @@ style='font-family:"Arial",sans-serif'> </span><span lang=bn style='font-size:
 12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2438;&#2480;
 &#2447;&#2439; &#2489;&#2458;&#2509;&#2459;&#2503;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=17 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image005.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image005.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2447;&#2476;&#2434;
 &#2447;&#2439; &#2489;&#2458;&#2509;&#2459;&#2503; &#2536;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-bengali_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2404;
 &#2468;&#2507;, &#2438;&#2478;&#2495;
 &#2437;&#2476;&#2486;&#2509;&#2479;&#2439; &#2489;&#2495;&#2488;&#2503;&#2476;
@@ -395,8 +593,30 @@ style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2437;
 <p class=MsoNormal style='margin-bottom:0cm;text-align:justify;line-height:
 normal'><span
 style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
-position:relative;top:8.0pt'><img width=140 height=30
-src="electronics%20and%20communication%20engineering-bengali_files/image006.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image007.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;font-family:"Arial",sans-serif'>=V<sub>dc</sub></span><span
 lang=bn style='font-family:"Arial",sans-serif'> </span><span lang=bn
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>(o/p)</span></p>
@@ -410,8 +630,30 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2455;&#2465;&#2492;)
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=15 height=30
-src="electronics%20and%20communication%20engineering-bengali_files/image007.gif"></span></p>
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image007.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=bn
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2447;&#2463;&#2494;
@@ -438,8 +680,30 @@ lang=bn style='font-family:"Arial",sans-serif'> &#2453;&#2480;&#2495;</span><spa
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>
 (avavg)=g</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=19 height=30
-src="electronics%20and%20communication%20engineering-bengali_files/image008.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image008.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.
 &#2453;&#2494;&#2480;&#2467;</span><span lang=bn style='font-family:"Arial",sans-serif'>
 </span><span lang=bn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,&#2447;&#2463;&#2494;
