--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-hindi.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-hindi.htm
@@ -346,46 +346,200 @@ style='font-family:"Arial",sans-serif'>,</span><span lang=hi style='font-size:
 &#2340;&#2348; &#2325;&#2375; &#2348;&#2368;&#2330; &#2361;&#2376;
 &#2332;&#2348;, </span><span lang=hi style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2351;&#2342;&#2367;
 &#2350;&#2376;&#2306; &#2325;&#2361;&#2370;&#2306; &#2325;&#2367;
 &#2351;&#2361; &#2361;&#2376;, </span><span lang=hi style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2340;&#2379;
 0 &#2340;&#2325; </span><span lang=hi style='font-family:"Arial",sans-serif'>&#2332;&#2348;
 </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2340;&#2325;</span><span
 lang=hi style='font-family:"Arial",sans-serif'> &#2324;&#2352;
 &#2350;&#2376;&#2306; 0 &#2325;&#2375; &#2348;&#2352;&#2366;&#2348;&#2352;
 &#2357;&#2368;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image004.gif"></span><sub><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><sub><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2354;&#2379;&#2337;</span></sub><span
 lang=hi style='font-family:"Arial",sans-serif'> &#2325;&#2352;&#2344;&#2375;
 &#2332;&#2366; </span><span lang=hi style='font-size:12.0pt;line-height:150%;
 font-family:"Arial",sans-serif'>&#2352;&#2361;&#2366; &#2361;&#2370;&#2306;,
 &#2340;&#2379; </span><span lang=hi style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>2
 &#2325;&#2375;</span><span lang=hi style='font-family:"Arial",sans-serif'> </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2348;&#2368;&#2330;
 &#2361;&#2376;&#2404;</span><span lang=hi style='font-family:"Arial",sans-serif'>
 </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=hi
@@ -403,13 +557,57 @@ lang=hi style='font-family:"Arial",sans-serif'> </span><span lang=hi
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2324;&#2352;
 &#2351;&#2361; &#2361;&#2376;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=17 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image005.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image005.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2324;&#2352;
 &#2351;&#2361; 2 &#2361;&#2376;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-hindi_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2404;
 &#2340;&#2379;, &#2350;&#2376;&#2306;
 &#2344;&#2367;&#2358;&#2381;&#2330;&#2367;&#2340; &#2352;&#2370;&#2346;
@@ -425,8 +623,30 @@ style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>is&#236
 <p class=MsoNormal style='margin-bottom:0cm;text-align:justify;line-height:
 normal'><span
 style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
-position:relative;top:8.0pt'><img width=140 height=30
-src="electronics%20and%20communication%20engineering-hindi_files/image006.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image006.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;font-family:"Arial",sans-serif'>=V<sub>&#2337;&#2368;&#2360;&#2368;</sub></span><span
 lang=hi style='font-family:"Arial",sans-serif'> </span><span lang=hi
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>(o/p)</span></p>
@@ -440,8 +660,30 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2324;&#2360;&#2340;)
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=15 height=30
-src="electronics%20and%20communication%20engineering-hindi_files/image007.gif"></span></p>
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image007.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=hi
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2351;&#2361;
@@ -471,8 +713,30 @@ lang=hi style='font-family:"Arial",sans-serif'> </span><span lang=hi
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>(&#2319;&#2357;&#2368;
 g&#2332;&#2368;)=</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=19 height=30
-src="electronics%20and%20communication%20engineering-hindi_files/image008.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image008.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=hi style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#2404;
 &#2325;&#2381;&#2351;&#2379;&#2306;&#2325;&#2367;</span><span lang=hi
 style='font-family:"Arial",sans-serif'> </span><span lang=hi style='font-size:
