--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-kannada.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-kannada.htm
@@ -361,27 +361,115 @@ lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'
 &#3207;&#3238;&#3265; &#3247;&#3262;&#3253;&#3262;&#3223; </span><span lang=kn
 style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>-
 &#3240;&#3262;&#3240;&#3265; &#3257;&#3264;&#3223;&#3270;
 &#3257;&#3271;&#3251;&#3263;&#3238;&#3248;&#3270; </span><span lang=kn
 style='font-family:"Arial",sans-serif'>,
 &#3257;&#3262;&#3223;&#3262;&#3238;&#3248;&#3270; 0 to </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>to
 </span><span lang=kn style='font-family:"Arial",sans-serif'>,</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>to</span><span
 lang=kn style='font-family:"Arial",sans-serif'>
 &#3246;&#3236;&#3277;&#3236;&#3265; &#3240;&#3262;&#3240;&#3265; V</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image004.gif"></span><sub><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><sub><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3250;&#3275;&#3233;&#3277;</span></sub><span
 lang=kn style='font-family:"Arial",sans-serif'>
 &#3205;&#3240;&#3277;&#3240;&#3265; 0 &#3223;&#3270; </span><span lang=kn
@@ -389,18 +477,84 @@ style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3256;
 &#3206;&#3223; 2 </span><span lang=kn style='font-family:"Arial",sans-serif'>&#3248;
 &#3240;&#3233;&#3265;&#3253;&#3270; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3207;&#3248;&#3265;&#3236;&#3277;&#3236;&#3238;&#3270;</span><span
 lang=kn style='font-family:"Arial",sans-serif'> </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3246;&#3236;&#3277;&#3236;&#3265;</span><span
 lang=kn style='font-family:"Arial",sans-serif'>2</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=kn
@@ -420,13 +574,57 @@ line-height:150%;font-family:"Arial",sans-serif'>&#3257;&#3271;&#3251;&#3244;&#3
 lang=kn style='font-family:"Arial",sans-serif'> </span><span lang=kn
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3207;&#3238;&#3265;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=17 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image005.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image005.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3246;&#3236;&#3277;&#3236;&#3265;
 &#3207;&#3238;&#3265; 2</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-kannada_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.
 &#3206;&#3238;&#3277;&#3238;&#3248;&#3263;&#3202;&#3238;,
 &#3240;&#3262;&#3240;&#3265;
@@ -443,8 +641,30 @@ lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'
 <p class=MsoNormal style='margin-bottom:0cm;text-align:justify;line-height:
 normal'><span
 style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
-position:relative;top:8.0pt'><img width=140 height=30
-src="electronics%20and%20communication%20engineering-kannada_files/image006.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image006.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;font-family:"Arial",sans-serif'>=V<sub>dc</sub></span><span
 lang=kn style='font-family:"Arial",sans-serif'> </span><span lang=kn
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>(o/p)</span></p>
@@ -458,8 +678,30 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#3256;&#3248;&#3262;&
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=15 height=30
-src="electronics%20and%20communication%20engineering-kannada_files/image007.gif"></span></p>
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image007.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=kn
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3240;&#3262;&#3240;&#3265;
@@ -486,8 +728,30 @@ lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'
 lang=kn style='font-family:"Arial",sans-serif'> </span><span lang=kn
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,(avg)=g</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=19 height=30
-src="electronics%20and%20communication%20engineering-kannada_files/image008.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image008.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.
 &#3215;&#3221;&#3270;&#3202;&#3238;&#3248;&#3270;</span><span lang=kn
 style='font-family:"Arial",sans-serif'> </span><span lang=kn style='font-size:
