--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-malayalam.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-malayalam.htm
@@ -346,25 +346,113 @@ style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,&#3335
 lang=ml style='font-family:"Arial",sans-serif'>&#3335;&#3364;&#3405; 0
 &#3374;&#3393;&#3364;&#3453; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3381;&#3376;&#3398;</span><span
 lang=ml style='font-family:"Arial",sans-serif'>
 &#3342;&#3368;&#3405;&#3368;&#3405; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=18 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image002.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image002.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3358;&#3390;&#3451;
 &#3370;&#3377;&#3358;&#3405;&#3358;&#3390;&#3453;, </span><span lang=ml
 style='font-family:"Arial",sans-serif'>&#3358;&#3390;&#3451; </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>V
 </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image004.gif"></span><sub><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><sub><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3378;&#3403;&#3361;&#3405;</span></sub><span
 lang=ml style='font-family:"Arial",sans-serif'> </span><span lang=ml
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,0-&#3368;&#3405;
@@ -375,19 +463,85 @@ lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'
 2-&#3368;&#3393;&#3330;</span><span lang=ml style='font-family:"Arial",sans-serif'>
 </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=22 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image003.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image003.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3335;&#3359;&#3375;&#3391;&#3453;
 &#3334;&#3363;&#3405;</span><span lang=ml style='font-family:"Arial",sans-serif'>
 </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.</span><span
 lang=ml style='font-family:"Arial",sans-serif'> </span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,and
 I am going to have V</span></p>
 
@@ -404,12 +558,56 @@ style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3333;
 &#3334;&#3363;&#3405;.</span><span lang=ml style='font-family:"Arial",sans-serif'>
 </span><span lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3335;&#3364;&#3405;</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=17 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image005.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image005.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>2</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:5.0pt'><img width=10 height=22
-src="electronics%20and%20communication%20engineering-malayalam_files/image004.gif"></span><span
+position:relative;top:5.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image004.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3334;&#3363;&#3405;
 . &#3333;&#3364;&#3393;&#3349;&#3402;&#3363;&#3405;&#3359;&#3405;,
 &#3358;&#3390;&#3451;
@@ -429,8 +627,30 @@ lang=ml style='font-family:"Arial",sans-serif'>,&#3335;&#3364;&#3391;&#3368;&#33
 <p class=MsoNormal style='margin-bottom:0cm;text-align:justify;line-height:
 normal'><span
 style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
-position:relative;top:8.0pt'><img width=140 height=30
-src="electronics%20and%20communication%20engineering-malayalam_files/image006.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image006.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;font-family:"Arial",sans-serif'>=V<sub>dc</sub></span><span
 lang=ml style='font-family:"Arial",sans-serif'> </span><span lang=ml
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>(o/p)</span></p>
@@ -444,8 +664,30 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#3382;&#3376;&#3390;&
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=15 height=30
-src="electronics%20and%20communication%20engineering-malayalam_files/image007.gif"></span></p>
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image007.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:150%'><span lang=ml
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>&#3358;&#3390;&#3451;&#3346;&#3376;&#3393;</span><span
@@ -471,8 +713,30 @@ lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'
 lang=ml style='font-family:"Arial",sans-serif'> </span><span lang=ml
 style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>,(avg)=</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
-position:relative;top:8.0pt'><img width=19 height=30
-src="electronics%20and%20communication%20engineering-malayalam_files/image008.gif"></span><span
+position:relative;top:8.0pt'><div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/ELECTRONICS%20AND%20COMMUNICATION%20ENGINEERING/lec5%20POWER%20ELECTRONICS%20%20corrected_files/image008.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div></span><span
 lang=ml style='font-size:12.0pt;line-height:150%;font-family:"Arial",sans-serif'>.
 &#3349;&#3390;&#3376;&#3363;&#3330;,</span><span lang=ml style='font-family:
 "Arial",sans-serif'> </span><span lang=ml style='font-size:12.0pt;line-height:
